--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -7,7 +7,7 @@
 <!-- зона заголовка html, тег <title> - строка, которую браузер отображает на вкладках над страницами, <meta> и <link> сообщают технические сведения для браузера, например, что файл имеет кодировку Юникод (utf-8) -->
 
 	<head>
-		<title>Личная страница Веры Кузнецовой</title>
+		<title>Личная страница Даши Поварницыной</title>
 	 	<!-- Required meta tags -->
 	 	<meta charset="utf-8">
 	 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,9 +50,9 @@
 					<div class="col-md-4">
 						<br><br>
 <!-- здесь и дальше нужно поменять весь содержательный текст, чтобы получилась ваша личная страница -->
-						<h1>Оля Ляшевская</h1>
+						<h1>Даша Поварницына</h1>
 						<hr> <!-- это горизонтальная линия -->
-						<p><i>Человек, умеющий <b>создавать</i> HTML</b></p> 
+						<p><i>Человек, учащийся <b>создавать</i> HTML</b></p> 
 					</div>
 					<div class="col-md-4">
 <!-- img - тег для вставки изображений. Мы использовали атрибут style, чтобы задать размер изображения и ширину рамки-->
@@ -77,12 +77,12 @@
 					</article>
 					<article>
 						<h3>Родной город</h3>
-						<p>Москва</p>
+						<p>Набережные Челны (это в республике Татарстан)</p>
 					</article>
 					<article>
 						<h3>Школа</h3>
 <!-- когда будете менять текст, не используйте бюрократических слов типа ГБОУ СОШ, ну пожаалуйста -->
-						<p>СУНЦ НГУ</p>
+						<p>Гимназия 26</p>
 					</article>
 				</div>
 
@@ -107,7 +107,7 @@
 					<ul>
 						<li>VK</li>
 						<li>Discord</li>
-						<li>Telegram</li>
+						<li>@DanielleWilds</li>
 					</ul>
 				</div>
 			</div>
