--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -52,12 +52,12 @@
 <!-- здесь и дальше нужно поменять весь содержательный текст, чтобы получилась ваша личная страница -->
 						<h1>Даша Поварницына</h1>
 						<hr> <!-- это горизонтальная линия -->
-						<p><i>Человек, учащийся <b>создавать</i> HTML</b></p> 
+						<p><i>Человек <b>любопытствующий..</i></b></p> 
 					</div>
 					<div class="col-md-4">
 <!-- img - тег для вставки изображений. Мы использовали атрибут style, чтобы задать размер изображения и ширину рамки-->
 <!-- Измените URL на URL вашей фотографии, а также настройте размер изображения -->
-<img src="myphoto.jpg" style="height:320px; margin:20px 20px 40px 20px; " >
+<img src="myphoto.jpg" style="height:340px; margin:20px 20px 40px 20px; " >
 					</div>
 				</div>
 			</div>
@@ -88,16 +88,21 @@
 
 				<div class="col-md-6">
 					<article>
-						<h3>Тут можно написать</h3>
-						<p>Еще много много много много много много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						много <br>
-						всего о себе</p>
+						<h3>Обо мне</h3>
+						<p><ul>
+							<li>работа руками для меня лучший способ расслабиться и провести время с удовольтвием: <br>
+								<ul>
+									<li>занимаюсь вышивкой <br>
+									<li>готовлю разные блюда<br>
+									(люблю эксперементировать, не следуя рецептам) <br>
+									<li>рисую на одежде и шопперах  <br>
+									(лишь жалею, что не училась этому профессионально) <br>
+								</ul>
+							<li>занималась плаванием до 15 лет, поэтому до сих пор это мой любимый спорт <br>
+							<li>у меня есть сухопутная черепашка Чапа <br>
+							<li>в 8-9 классе узнала про теорию лингвистической относительности, <br>
+							после чего написала проект по этой теме на базе слов татарского языка
+							</ul></p>
 					</article>
 				</div>
 
@@ -105,9 +110,8 @@
 					<h3>Я в соцсетях</h3>
 <!-- тег <ul> - unordered list. Еще бывает тег <ol> -->
 					<ul>
-						<li>VK</li>
-						<li>Discord</li>
-						<li>@DanielleWilds</li>
+						<li><a href="t.me/DanielleWilds">Telegram</a></li>
+						<li><a href="https://github.com/Darya08020">Github</a></li>
 					</ul>
 				</div>
 			</div>
@@ -116,7 +120,7 @@
 <!-- это подвал. В этой части страницы обычно ставят копирайт (с помощью символа &copy;) и пишут об истории создания страницы. Поставьте свой копирайт -->
 		<footer class="bs-docs-footer"> 
 			<div class="container"> 
-				<p style="text-align:right; ">&copy; В. Кузнецова, 2024</p> 
+				<p style="text-align:right; ">&copy; Д. Поварницына, 2025</p> 
 			</div>
 		</footer>
 	</body>
