--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -90,7 +90,7 @@
 					<article>
 						<h3>Обо мне</h3>
 						<p><ul>
-							<li>работа руками для меня лучший способ расслабиться и провести время с удовольтвием: <br>
+							<li>ручная работа для меня лучший способ расслабиться и провести время с удовольтвием: <br>
 								<ul>
 									<li>занимаюсь вышивкой <br>
 									<li>готовлю разные блюда<br>
