--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -113,6 +113,7 @@
 						<li><a href="t.me/DanielleWilds">Telegram</a></li>
 						<li><a href="https://github.com/Darya08020">Github</a></li>
 					</ul>
+					<img src="myphoto2.jpg" style="height:340px; margin:20px 20px 40px 20px; " >
 				</div>
 			</div>
 		</section>
